fix layout issue at unlock page

--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -1,9 +1,11 @@
 @import "vars";
 
 html,
-body {
-  height: 100vh;
-  width: 100%;
+body,
+#root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
   overflow: auto;
 }
 
@@ -17,7 +19,8 @@ body {
 
 .tm-theme {
   min-width: 1280px;
-  height: 100%;
+  min-height: 100vh;
+  height: auto;
 }
 
 .tm-theme.tomo-wallet {
